--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,16 @@
-target
-tmp
+.DS_Store
+node_modules/
+vendor/
+.awcache/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+_build
+# Editor directories and files
 .idea
 .vscode
-*.log
-*.js.map
-*.iml
-*.ipr
-*.iws
-**/dist/**
-**/dist
-*.zip
-/out
-/.idea_modules
-/.classpath
-/.project
-/.settings
-.DS_Store
-.cache
-.classpath
-.project
-.target
-bin/
-.settings
-node_modules
-/dist/
-builds/
-app/resource/output
-templateCache.js
-app/css
-.tmp
-.data
-.sass-cache
-node_sort
-ew.sublime*
-coverage
-test-results.xml
-._**
-build-date.json
-bower_components/
-src/css/*
-karma.run.config.js
-*.js.map
-/nbproject/private/
-mock-server/public/index.json
-.clog.toml
-.editorconfig
-.htmlhintrc
-.jshintrc
-.jshintignore
-.eslintrc
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
